--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
     "bootstrap": "^4.0.0-alpha.6",
     "cross-env": "^5.2.0",
     "eslint-plugin-vue": "^5.2.3",
     "jquery": "^3.4.1",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "eslint": "^6.2.2",
