--- a/package.json
+++ b/package.json
@@ -10,32 +10,26 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .ts,.js,.vue ."
   },
-  "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
-    "axios": "^0.19.0",
-    "babel-eslint": "^10.0.3",
-    "bootstrap": "^4.0.0-alpha.6",
-    "cross-env": "^5.2.0",
-    "jquery": "^3.4.1",
-    "node-sass": "^4.14.1",
-    "nuxt": "^2.11.0",
-    "vue-cache-data": "^1.5.1",
-    "vuex": "^3.1.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxt/typescript-runtime": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-loader": "^3.0.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^5.2.3",
+    "@nuxtjs/axios": "^5.3.6",
     "nuxt-property-decorator": "^2.9.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^5.2.3",
     "pug": "^2.0.4",
+    "node-sass": "^4.14.1",
     "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^8.0.2",
+    "babel-eslint": "^10.0.3",
+    "cross-env": "^5.2.0",
+    "bootstrap": "^4.0.0-alpha.6",
+    "jquery": "^3.4.1",
+    "nuxt": "^2.11.0",
+    "vuex": "^3.1.1",
     "webpack": "^4.39.3"
   }
 }
