--- a/package.json
+++ b/package.json
@@ -7,26 +7,29 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "lint": "eslint --ext .ts,.js,.vue ."
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "@nuxt/types": "^2.15.3",
+    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxt/typescript-runtime": "^2.1.0",
     "@nuxtjs/axios": "^5.3.6",
-    "axios": "^0.19.0",
+    "@nuxtjs/eslint-config-typescript": "^6.0.0",
+    "@nuxtjs/router": "^1.6.1",
     "babel-eslint": "^10.0.3",
     "bootstrap": "^4.0.0-alpha.6",
     "cross-env": "^5.2.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-vue": "^5.2.3",
     "jquery": "^3.4.1",
-    "nuxt": "^2.0.0",
-    "vuex": "^3.1.1"
-  },
-  "devDependencies": {
-    "eslint": "^6.2.2",
-    "eslint-loader": "^3.0.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
+    "nuxt": "^2.11.0",
+    "nuxt-property-decorator": "^2.9.1",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^8.0.2",
     "webpack": "^4.39.3"
   }
 }
