--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^8.0.2",
-    "webpack": "^4.39.3"
+    "webpack": "^4.39.3",
+    "vuex": "^3.1.1",
+    "axios": "^0.21.0"
   }
 }
