--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .ts,.js,.vue ."
   },
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.21.1"
+  },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
     "@nuxt/typescript-build": "^2.1.0",
@@ -30,6 +32,7 @@
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^8.0.2",
+    "vuex": "^3.6.2",
     "webpack": "^4.39.3"
   }
 }
