--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "private": true,
   "scripts": {
     "dev": "cross-env MODE=dev nuxt",
-    "devBuild": "cross-env MODE=devOutsideNetwork nuxt build",
-    "stageBuild": "nuxt build",
-    "start": "nuxt start",
+    "uatGenerate": "cross-env MODE=uat nuxt generate",
     "stageGenerate": "nuxt generate",
-    "devGenerate": "cross-env MODE=devOutsideNetwork nuxt generate",
-    "test": "jest"
+    "devBuild": "cross-env MODE=dev nuxt build",
+    "uatBuild": "cross-env MODE=uat nuxt build",
+    "stageBuild": "nuxt build",
+    "start": "nuxt start"
   },
   "dependencies": {
     "core-js": "^2.6.12",
     "nuxt": "^2.15.8",
-    "qrcanvas-vue": "^2.1.0",
+    "qrcanvas-vue": "^2.1.1",
     "view-design": "^4.6.1",
     "vue-qrcode": "^1.0.0",
-    "webpack": "^4.46.0",
     "xlsx": "^0.17.1"
   },
   "devDependencies": {
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/router": "^1.6.1",
     "@vue/test-utils": "^1.2.1",
