--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/router": "^1.6.1",
     "babel-eslint": "^10.0.3",
+    "bluebird": "^3.7.2",
     "bootstrap": "^4.0.0-alpha.6",
     "cross-env": "^5.2.0",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^5.2.3",
+    "file-saver": "^2.0.5",
     "jquery": "^3.4.1",
+    "jszip": "^3.10.0",
     "node-sass": "^4.14.1",
     "nuxt": "^2.11.0",
     "nuxt-property-decorator": "^2.9.1",
@@ -33,6 +36,7 @@
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^8.0.2",
     "vuex": "^3.6.2",
-    "webpack": "^4.39.3"
+    "webpack": "^4.39.3",
+    "xlsx": "^0.16.8"
   }
 }
